# carrick

./: .gitignore  Cargo.toml  README.md  agy-report.md  deny.toml  gap-research.md  goal.md  golang-bringup-handoff.md  justfile  nodejs-bringup-handoff.md  plan.md  rosetta-glibc-amd64-handoff.md  rust_out
.antigravitycli/: 49ae6c27-9776-4baa-96d1-af907c09bcb3.json  8bfa3ee4-6e93-4fa0-9ab5-ca424bf5b05f.json
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.semgrep/: bitflags.yml  carrick-audit-safety.yml  rust-no-eprintln-for-debugging.yml  rust-no-handrolled-abi-bytes.yml  rust-no-timing-band-aids.yml  rust-use-bitflags-for-abi-flags.yml
bench-native/: Cargo.toml
conformance-probes/: .gitignore  Cargo.toml
conformance-probes/src/: lib.rs
crates/carrick-cli/: Cargo.toml
crates/carrick-cli/src/: args.rs  commands.rs  debug.rs  fs_setup.rs  lifecycle.rs  main.rs  runtime_util.rs  trace_cli.rs
crates/carrick-cli/src/serve/: build.rs  handlers.rs  mod.rs  model.rs  router.rs  spawn.rs
crates/carrick-cli/tests/: build.rs  cli.rs  conformance.rs  fs_backend_flag.rs  linux_fixture.rs  nested_pipe.rs  perf_runner.rs  serve.rs
crates/carrick-cli/tests/perf_support/: cases.rs  invoke.rs  metric.rs  mod.rs  provenance.rs  stats.rs  xboundary.rs
crates/carrick-conformance/: Cargo.toml
crates/carrick-conformance/src/: engine.rs  generate.rs  images.rs  main.rs  manifest.rs  matrix.rs  oracle.rs  verdict.rs
crates/carrick-conformance/src/parsers/: gotest.rs  ltp.rs  mod.rs  regrtest.rs  shell.rs  tap.rs
crates/carrick-engine/: Cargo.toml
crates/carrick-engine/src/: lib.rs
crates/carrick-hvf/: Cargo.toml  build.rs
crates/carrick-hvf/csrc/: carrick_shim.c
crates/carrick-hvf/src/: compat.rs  darwin_kqueue.rs  fork_coord.rs  fork_quiesce.rs  host_signal.rs  io_wait.rs  itimer.rs  lib.rs  posix_timer.rs  probes.rs  shared_aperture.rs  syscall.rs  thread.rs  trap.rs  vcpu_kick.rs
crates/carrick-hvf/src/trap/: memprot.rs  sysreg.rs
crates/carrick-image/: Cargo.toml
crates/carrick-image/src/: auth.rs  lib.rs
crates/carrick-mem/: Cargo.toml
crates/carrick-mem/src/: elf.rs  lib.rs  memory.rs  page_table.rs  vdso.rs  vdso_getrandom_chacha.rs
crates/carrick-runtime/: Cargo.toml
crates/carrick-runtime/src/: apfs.rs  binfmt.rs  compat.rs  container.rs  cred_ipc.rs  darwin_fs.rs  darwin_kqueue.rs  deadlock_watchdog.rs  dtrace_consumer.rs  event_ring.rs  execute.rs  fork_coord.rs  fork_quiesce.rs  fs_backend.rs  guest_cpu.rs  host_mapping.rs  host_proc.rs  host_signal.rs  host_tty.rs  inotify.rs  interactive_supervisor.rs  layer_cache.rs  lib.rs  linux_abi.rs  memory.rs  oci.rs  overlay.rs  page_table.rs  pathcodec.rs  probes.rs  pty_relay.rs  rootfs.rs  runtime.rs  seccomp.rs  shared_aperture.rs  syscall.rs  thread.rs  trap.rs  ulock.rs  vdso.rs
crates/carrick-runtime/src/dispatch/: abi_args.rs  creds.rs  epoll_shim.rs  fd_table.rs  fifo_beacon.rs  fs.rs  ioring.rs  mem.rs  mod.rs  net.rs  proc.rs  proctitle.rs  signal.rs  sysv.rs  time.rs
crates/carrick-runtime/src/dispatch/fs/: access.rs  fd_helpers.rs  pathres.rs  sendfile.rs  stat.rs  state.rs  xattr.rs
crates/carrick-runtime/src/dispatch/net/: support.rs
crates/carrick-runtime/src/namespace/: mod.rs  pid.rs  process.rs  supervisor.rs  user.rs
crates/carrick-runtime/src/runtime/: exec.rs  fault.rs
crates/carrick-runtime/src/trap/: sysreg.rs
crates/carrick-runtime/src/vfs/: bind.rs  dev.rs  devpts.rs  etc_services.rs  mod.rs  mount.rs  proc.rs  resolvconf.rs  rootfs.rs  sys.rs
crates/carrick-runtime/tests/: address_space.rs  concurrency_contracts.rs  interactive_supervisor.rs  interactive_tty.rs  io_blocking_guard.rs  mach_cow_probe.rs  rootfs_overlay.rs  runtime_loop.rs  syscall_creds.rs  syscall_fs.rs  syscall_mem.rs  syscall_net.rs  syscall_process.rs  syscall_table.rs  thread_stress_harness.rs  trap_hvf.rs  wait_proc_exit_recovery.rs
crates/carrick-runtime/tests/integration/: address_space.rs  compat_report.rs  concurrency_contracts.rs  elf_inspector.rs  io_wait.rs  main.rs  oci_layout.rs  rootfs_overlay.rs  rootfs_streaming.rs  syscall_creds.rs  syscall_fs.rs  syscall_mem.rs  syscall_net.rs  syscall_signal.rs  syscall_table.rs  syscall_thread.rs  syscall_time.rs
crates/carrick-runtime/tests/integration/common/: syscall_support.rs
crates/carrick-runtime/tools/: build-vdso-getrandom.sh  vdso_fns.s  vdso_getrandom_blob.rs
crates/carrick-spec/: Cargo.toml
crates/carrick-spec/src/: lib.rs
docs/: architecture-overview.md  asymmetric-behavior-audit.md  build-decomposition-design.md  concurrent-go-build-netpoll-deadlock.md  conformance-coverage.md  conformance-testing.md  cpython-wave2-runner-notes.md  diagnostics-and-debugging.md  docker-compat-audit.md  epoll-kqueue-plan.md  forkserver-parent-process-deadlock.md  fs-host-capstd-amplification.md  go-build-shared-file-coherence-gap.md  go-conformance-punchlist.md  hvf-fork-vm-churn-virtualclock.md  lld-adoption-spike.md  lldb-debugging.md  namespaces-design.md  perf-goal.md  process-control-goal.md  procfs-conformance-roadmap.md  ptrace-darwin-design.md  rosetta-binfmt.md  rosetta.md  session-handoff-2026-06-02.md  support-matrix.md  sweep-perf.md  syscall-shim-design.md  syscalls-emulation-map.md  tier-b-wall.md  (+3 more)
fixtures/linux-aarch64-hello/: Cargo.toml
fixtures/linux-aarch64-hello/src/: abi.rs  argv_echo.rs  cat_motd.rs  clock_nanosleep.rs  clone_exit.rs  errno_matrix.rs  faccessat2_motd.rs  fchmod_motd.rs  fchown_motd.rs  flock_motd.rs  fork_bench.rs  fork_private_isolation.rs  ftruncate_motd.rs  futex.rs  getcpu.rs  inet_connect.rs  linkat_motd.rs  madvise.rs  main.rs  membarrier.rs  mkdirat_motd.rs  mmap_churn_threads.rs  mmap_v8_hint.rs  mprotect_fault.rs  munmap_fault.rs  nanosleep.rs  nested_pipe.rs  openat2_motd.rs  pie_hello.rs  pipe_bidi.rs  pipe_dup3.rs  pipe_dup3_exec.rs  pipe_fork_poll.rs  ppoll_eventfd.rs  prctl.rs  preadv_motd.rs  process_bootstrap.rs  pselect_eventfd.rs  pwrite64_motd.rs  pwritev_motd.rs  (+22 more)
fixtures/mn-probes/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: elf_load_plan.rs
(+329 files in other folders)
