[package]
name = "carrick"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "A Rust bootstrap for Carrick, a Linux binary compatibility layer for macOS."

[dependencies]
anyhow = "1.0.100"
libc = "0.2"
camino = { version = "1.2.1", features = ["serde1"] }
cap-std = "4"
clap = { version = "4.5.51", features = ["derive", "env"] }
fd-lock = "4"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
getrandom = "0.3.4"
goblin = { version = "0.10.5", default-features = false, features = ["elf32", "elf64", "endian_fd", "std"] }
oci-distribution = { version = "0.11.0", default-features = false, features = ["rustls-tls"] }
reflink-copy = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = { version = "0.4.45", default-features = false }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
usdt = "0.6.0"
zerocopy = { version = "0.8.48", features = ["derive"] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
applevisor = { version = "1.0.0", default-features = false, features = ["macos-13-0"] }
applevisor-sys = { version = "1.0.0", default-features = false, features = ["macos-13-0"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
# First-class Docker client for the differential conformance harness
# (real-Linux reference side). MIT-licensed, async/tokio-native.
bollard = "0.18"
futures-util = "0.3"
# Base64-encode probe binaries to feed them over the guest's stdin (an
# argv vector can't carry ~600KB — exceeds ARG_MAX).
base64 = "0.22"
