[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["fixtures/*", "crates/*/fixtures/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

# Build-speed tuning that does NOT touch the linker or DTrace (see
# docs/build-decomposition-design.md and .cargo/config.toml for why lld is off).
# macOS defaults to bundling debuginfo into a .dSYM via dsymutil on every link;
# `unpacked` skips that packaging step (lldb/`carrick trace` still resolve line
# info from the .o), cutting the link-dominated test-binary rebuild waves.
[profile.dev]
split-debuginfo = "unpacked"

[profile.test]
split-debuginfo = "unpacked"

# Everyday fast inner-loop profile: drop heavy type/variable DWARF, keep line
# tables (backtraces + `carrick trace`/lldb line numbers still work). Use
# `cargo build/test --profile dev-fast` for the normal loop; plain `dev` keeps
# full debuginfo for deep lldb variable inspection (the macos-vm-lldb-debug flow).
[profile.dev-fast]
inherits = "dev"
debug = "line-tables-only"
split-debuginfo = "unpacked"

[workspace.dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
libc = "0.2"
camino = { version = "1.2.1", features = ["serde1"] }
cap-std = "4"
clap = { version = "4.5.51", features = ["derive", "env"] }
fd-lock = "4"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
getrandom = "0.3.4"
goblin = { version = "0.10.5", default-features = false, features = ["elf32", "elf64", "endian_fd", "std"] }
oci-client = { version = "0.15", default-features = false, features = ["rustls-tls"] }
parking_lot = "0.12"
parking_lot_core = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = { version = "0.4.45", default-features = false }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
usdt = "0.6.0"
zerocopy = { version = "0.8.48", features = ["derive"] }
applevisor = { version = "1.0.0", default-features = false, features = ["macos-13-0"] }
applevisor-sys = { version = "1.0.0", default-features = false, features = ["macos-13-0"] }
# dev
assert_cmd = "2.1.1"
predicates = "3.1.3"
bollard = "0.18"
futures-util = "0.3"
base64 = "0.22"
