[package]
name = "conformance-probes"
version = "0.0.0"
edition = "2021"
publish = false
autobins = true

# Standalone syscall-probe binaries, one per file in src/bin/. Built as
# static aarch64-musl ELFs inside an arm64 rust:alpine container
# (scripts/build-probes.sh). Each prints deterministic, one-line-per-
# observation output; the conformance harness runs the SAME binary under
# carrick and real Linux and diffs line-by-line, so a divergence pinpoints
# the exact syscall (the "reducer"). Bins are auto-discovered — add a new
# probe by dropping a file in src/bin/ (no Cargo.toml edit, conflict-free
# for parallel authoring).

[dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
strip = true
panic = "abort"
