[package]
name = "carrick-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "carrick"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
carrick-runtime = { path = "../carrick-runtime" }
carrick-spec = { path = "../carrick-spec", features = ["clap"] }
carrick-image = { path = "../carrick-image" }
carrick-engine = { path = "../carrick-engine" }
anyhow.workspace = true
clap.workspace = true
camino.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
bollard.workspace = true
futures-util.workspace = true
base64.workspace = true
tokio.workspace = true
flate2.workspace = true
tar.workspace = true
