[package]
name = "carrick-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "carrick"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Guest-side syscall shim (forwarded to carrick-runtime). The base shim
# (getpid/get*id/gettid, answered guest-side from the identity page / TPIDR_EL1)
# is default ON. Build with `--no-default-features` for the legacy trap-only
# vector path.
default = ["syscall-shim"]
syscall-shim = ["carrick-runtime/syscall-shim"]
# In-memory fs backend selection (`--fs memory`). Default OFF on purpose; opt in
# with `cargo build -p carrick-cli --features fs-memory`.
fs-memory = ["carrick-spec/fs-memory", "carrick-engine/fs-memory", "carrick-runtime/fs-memory"]
# Debug-only tracing (compile-gated, default OFF). Each forwards to the owning
# crate; `debug-all` turns the lot on. e.g. `cargo build --features trace-tty`.
trace-tty = ["carrick-runtime/trace-tty"]
trace-io = ["carrick-runtime/trace-io"]
trace-traps = ["carrick-runtime/trace-traps"]
watchpoint = ["carrick-runtime/watchpoint"]
event-ring-dump = ["carrick-runtime/event-ring-dump"]
trace-hvf = ["carrick-runtime/trace-hvf"]
trace-syscalls = ["carrick-runtime/trace-syscalls"]
debug-stats = ["carrick-runtime/debug-stats"]
trace-elf = ["carrick-runtime/trace-elf"]
trace-dtrace = []
debug-all = [
    "trace-tty",
    "trace-io",
    "trace-traps",
    "watchpoint",
    "event-ring-dump",
    "trace-hvf",
    "trace-syscalls",
    "debug-stats",
    "trace-elf",
    "trace-dtrace",
]

[dependencies]
carrick-runtime = { path = "../carrick-runtime", default-features = false }
carrick-spec = { path = "../carrick-spec", features = ["clap"] }
carrick-image = { path = "../carrick-image" }
carrick-engine = { path = "../carrick-engine" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
tempfile.workspace = true
camino.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
futures-util.workspace = true
flate2.workspace = true
tar.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
carrick-test-support = { path = "../carrick-test-support" }
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
bollard.workspace = true
futures-util.workspace = true
base64.workspace = true
tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
