[package]
name = "carrick-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "carrick_engine"
path = "src/lib.rs"

[lints]
workspace = true

[features]
# In-memory fs backend selection (default OFF; control point is carrick-cli).
fs-memory = ["carrick-spec/fs-memory", "carrick-runtime/fs-memory"]

[dependencies]
camino = { workspace = true, features = ["serde1"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }
carrick-spec = { path = "../carrick-spec" }
carrick-image = { path = "../carrick-image" }
carrick-runtime = { path = "../carrick-runtime" }
anyhow = { workspace = true }
