[package]
name = "carrick-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "carrick_runtime"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
carrick-abi = { path = "../carrick-abi" }
anyhow.workspace = true
bitflags.workspace = true
libc.workspace = true
camino.workspace = true
cap-std.workspace = true
clap.workspace = true
fd-lock.workspace = true
flate2.workspace = true
getrandom.workspace = true
goblin.workspace = true
oci-client.workspace = true
parking_lot.workspace = true
parking_lot_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
usdt.workspace = true
zerocopy.workspace = true
carrick-spec = { path = "../carrick-spec" }


[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
applevisor.workspace = true
applevisor-sys.workspace = true

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.build-dependencies]
cc = "1"

[dev-dependencies]
carrick-test-support = { path = "../carrick-test-support" }
tempfile.workspace = true
carrick-image = { path = "../carrick-image" }
