[package]
name = "carrick-spec"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "carrick_spec"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = []
clap = ["dep:clap"]
# In-memory filesystem backend selection (`--fs memory` / FsBackendKind::Memory).
# Default OFF: a stock build runs only on the host-APFS backend, which is the
# only fork-coherent option (see docs/superpowers/specs/2026-06-07-fs-memory-feature-gate-design.md).
fs-memory = []

[dependencies]
camino = { workspace = true, features = ["serde1"] }
clap = { workspace = true, features = ["derive", "env"], optional = true }
oci-client = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
