[package]
name = "carrick-linux-aarch64-hello"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
publish = false

[profile.release]
panic = "abort"
strip = true
lto = false
codegen-units = 1

[[bin]]
name = "carrick-linux-aarch64-hello"
path = "src/main.rs"

[[bin]]
name = "carrick-linux-aarch64-clone-exit"
path = "src/clone_exit.rs"
