[package]
name = "carrick-linux-aarch64-hello"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
publish = false

[profile.release]
panic = "abort"
strip = true
lto = false
codegen-units = 1

[[bin]]
name = "carrick-linux-aarch64-hello"
path = "src/main.rs"

[[bin]]
name = "carrick-linux-aarch64-clone-exit"
path = "src/clone_exit.rs"

[[bin]]
name = "carrick-linux-aarch64-pipe-fork-poll"
path = "src/pipe_fork_poll.rs"

[[bin]]
name = "carrick-linux-aarch64-pipe-bidi"
path = "src/pipe_bidi.rs"

[[bin]]
name = "carrick-linux-aarch64-signal-basic"
path = "src/signal_basic.rs"

[[bin]]
name = "carrick-linux-aarch64-signal-default"
path = "src/signal_default.rs"
