[workspace]

[package]
name = "carrick-linux-aarch64-hello"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
publish = false

[profile.release]
panic = "abort"
strip = true
lto = false
codegen-units = 1

[[bin]]
name = "carrick-linux-aarch64-hello"
path = "src/main.rs"

[[bin]]
name = "carrick-linux-aarch64-clone-exit"
path = "src/clone_exit.rs"

[[bin]]
name = "carrick-linux-aarch64-pipe-fork-poll"
path = "src/pipe_fork_poll.rs"

[[bin]]
name = "carrick-linux-aarch64-nested-pipe"
path = "src/nested_pipe.rs"

[[bin]]
name = "carrick-linux-aarch64-thread-stress"
path = "src/thread_stress.rs"

[[bin]]
name = "carrick-linux-aarch64-pipe-bidi"
path = "src/pipe_bidi.rs"

[[bin]]
name = "carrick-linux-aarch64-pipe-dup3"
path = "src/pipe_dup3.rs"

[[bin]]
name = "carrick-linux-aarch64-inet-connect"
path = "src/inet_connect.rs"

[[bin]]
name = "carrick-linux-aarch64-write-hi-to-fd1"
path = "src/write_hi_to_fd1.rs"

[[bin]]
name = "carrick-linux-aarch64-pipe-dup3-exec"
path = "src/pipe_dup3_exec.rs"

[[bin]]
name = "carrick-linux-aarch64-read-then-write-via-stdio"
path = "src/read_then_write_via_stdio.rs"

[[bin]]
name = "carrick-linux-aarch64-two-pipes-dup3-exec"
path = "src/two_pipes_dup3_exec.rs"

[[bin]]
name = "carrick-linux-aarch64-udp-dns"
path = "src/udp_dns.rs"

[[bin]]
name = "carrick-linux-aarch64-udp-dns-debian"
path = "src/udp_dns_debian.rs"

[[bin]]
name = "carrick-linux-aarch64-signal-basic"
path = "src/signal_basic.rs"

[[bin]]
name = "carrick-linux-aarch64-signal-default"
path = "src/signal_default.rs"
